[tool.poetry]
name = "travel_assistant_agent"
version = "0.1.0"
description = ""
authors = ["Raphael Cohen <rapcohen@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.27"
langchain-ollama = "^0.3.8"
langgraph = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
